--- a/CppMail/CppMail.vcxproj
+++ b/CppMail/CppMail.vcxproj
@@ -149,11 +149,12 @@
   <ItemGroup>
     <ClCompile Include="CppMail.cpp" />
     <ClCompile Include="receive_email.cpp" />
-    <ClCompile Include="SocketRM.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="receive_email.h" />
-    <ClInclude Include="SocketRM.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="参考文献.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
