--- a/CppMail/CppMail.vcxproj.filters
+++ b/CppMail/CppMail.vcxproj.filters
@@ -21,16 +21,13 @@
     <ClCompile Include="receive_email.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="SocketRM.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="receive_email.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="SocketRM.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="参考文献.txt" />
   </ItemGroup>
 </Project>
