--- a/CppMail/CppMail.vcxproj.filters
+++ b/CppMail/CppMail.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="receive_email.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mfc_socket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="receive_email.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="mfc_socket.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
