--- a/CppMail/CppMail.vcxproj.filters
+++ b/CppMail/CppMail.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="smtp_mail.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="base64.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mfc_socket.h">
@@ -32,8 +35,14 @@
     <ClInclude Include="smtp_mail.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="base64.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="参考文献.txt" />
+    <Text Include="结果显示.txt">
+      <Filter>源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
