发邮件功能封装完成

--- a/Dll1/Dll1.vcxproj.filters
+++ b/Dll1/Dll1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="test.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="smtp_mail.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -33,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="smtp_mail.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
